# b8_texat_analysis

./: .gitignore  CMakeLists.txt  EnergyLoss.cpp  EnergyLoss.h  FitTrack.C  FitTrack.cpp  FitTrack.h  Hough2D.C  Hough2D.cpp  Hough2D.h  HoughTrack.C  HoughTrack.cpp  HoughTrack.h  MakeChain.C  Spectra.C  Spectra.cpp  Spectra.h  TypeDef.h  centralPeakVertex.out  csReg1.out  csReg1_4.out  csReg1_Corrected.out  csReg1_CorrectedPads.out  csReg3.out  cuts.root  leftChainHits.out  leftStripHits.out  mappingv3.xlsm  rightChainHits.out  rightStripHits.out  runSpectra.sh  spectra_siCalibration.root  spectrum_reg1.out  spectrum_reg3.out
alpha_calibration/: calibration.in  calibration.py
averageBeamProperties/: averageBeamEnergy.out  averageBeamProperties.py
azureConversion/: calc.C  crossSectionReg3.out  crossSectionReg3.out.bak  csReg3.out  test.out  test_grisha.out
azureConversionNew/: azure_reg1.out  azure_reg3.out  azure_reg3.out.bak  calcReg1.C  calcReg3.C  csReg1_Corrected.out  spectrum_reg1.out  spectrum_reg3.out
calcExcitationEnergy/: calcExcitationEnergy.C
calcSolidAngle/: calcSolidAngle.C  csReg3.out
compareGrisha/: plotComparison.py
derivativePeakKinematics/: CMakeLists.txt  Kinematics.C
dissertationPlots/: 9C_Reg1_0.5-_2.5-_1.5+_3.5-.out  9C_Reg1_0.5-_2.5-_2.5+.out  9C_Reg1_0.5-_2.5-_2.5+_3.5-.out  9C_Reg1_0.5-_2.5-_3.5-.out  9C_Reg3_0.5-_2.5-_1.5+_3.5-.out  9C_Reg3_0.5-_2.5-_2.5+.out  9C_Reg3_0.5-_2.5-_2.5+_3.5-.out  plotReg1.C  plotReg3.C
dissertationPlots/totalAzure/: 9C_0.5-_2.5+.out  9C_0.5-_2.5-.out  9C_0.5-_2.5-_0.5+_3.5-.out  9C_0.5-_2.5-_1.5+_3.5-.out  9C_0.5-_2.5-_1.5-.out  9C_0.5-_2.5-_2.5+.out  9C_0.5-_2.5-_2.5+_3.5-.out  9C_0.5-_2.5-_3.5-.out  param_0.5-_2.5+.par  param_0.5-_2.5-_0.5+_3.5-.par  param_0.5-_2.5-_1.5+_3.5-.par  param_0.5-_2.5-_1.5-.par  param_0.5-_2.5-_2.5+.par  param_0.5-_2.5-_2.5+_3.5-.par  param_0.5-_2.5-_3.5-.out.par
paperPlots/: 9C_Reg1_0.5-_2.5-.out  9C_Reg1_0.5-_2.5-_2.5+.out  9C_Reg1_0.5-_2.5-_2.5+_3.5-.out  9C_Reg3_0.5-_2.5-.out  9C_Reg3_0.5-_2.5-_0.5+_3.5-.out  9C_Reg3_0.5-_2.5-_1.5+_3.5-.out  9C_Reg3_0.5-_2.5-_1.5-.out  9C_dETotalE_d9.root  MMAverageEnergy.root  MMCumulative.root  crossSection_1.root  icE.root  plot.C  plotReg1_Old.C  plotReg3_Old.C  siEcsiE.root  vertexTotalEnergy_Reg1.root  vertexTotalEnergy_Reg3.root
paperPlots/crossSection/: 9C_Reg1_0.5-_2.5-_0.5+_3.5-.out  9C_Reg1_0.5-_2.5-_1.5+_3.5-.out  9C_Reg1_0.5-_2.5-_1.5-.out  9C_Reg3_0.5-_2.5-_2.5+.out  9C_Reg3_0.5-_2.5-_2.5+_3.5-.out  9C_Reg3_0.5-_2.5-_3.5-.out  9C_graph1.root  plot.C
paperPlots/crossSection/totalAzure/: 9C_0.5-_2.5-.out  9C_0.5-_2.5-_1.5+_3.5-.out  9C_0.5-_2.5-_2.5+_3.5-.out  param_0.5-_2.5-.par  param_0.5-_2.5-_2.5+.par
paperPlots/totalAzure/: 9C_0.5-_2.5-_2.5+.out  param_0.5-_2.5-_1.5+_3.5-.par  param_0.5-_2.5-_2.5+_3.5-.par
